--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,29 @@
 OPENAI_API_KEY=sk-your-openai-key-here
+
 NEO4J_URI=neo4j+s://your-db-id.databases.neo4j.io
 NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=your-db-password
+NEO4J_PASSWORD=your-neo4j-password
 NEO4J_DATABASE=neo4j
+
+# Graph parallelism
+GRAPH_BATCHES_PER_WORKER=2
+GRAPH_MIN_BATCHES_PER_FILE=8
+GRAPH_LOG_RATE_LIMIT_WAIT=true
+
+# Ingestion tuning
+INGEST_CHUNK_SIZE=2000
+INGEST_CHUNK_OVERLAP=200
+INGEST_MIN_CHUNK_CHARS=1
+INGEST_NORMALIZE_WHITESPACE=true
+INGEST_DEDUP_WITHIN_FILE=true
+INGEST_DEDUP_ACROSS_JOB=true
+
+# Write/embedding throughput
+NEO4J_INGEST_BATCH_SIZE=100
+GRAPH_WRITE_FLUSH_SIZE=300
+EMBEDDING_BATCH_SIZE=96
+SKIP_EXISTING_EMBEDDINGS=true
+
+# Extraction detail/latency tradeoff
+GRAPH_EXTRACT_NODE_PROPERTIES=true
+GRAPH_EXTRACT_RELATIONSHIP_PROPERTIES=true
