Migrate OpenAI integration to Azure and align embedding config

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-OPENAI_API_KEY=sk-your-openai-key-here
+AZURE_OPENAI_API_KEY=your-azure-openai-api-key
+AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
+AZURE_OPENAI_API_VERSION=2024-10-21
+AZURE_OPENAI_LLM_DEPLOYMENT=gpt-4o-mini
+AZURE_OPENAI_EMBEDDING_DEPLOYMENT=text-embedding-3-large
 
 NEO4J_URI=neo4j+s://your-db-id.databases.neo4j.io
 NEO4J_USERNAME=neo4j
