--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,29 @@ SKIP_EXISTING_EMBEDDINGS=true
 # Extraction detail/latency tradeoff
 GRAPH_EXTRACT_NODE_PROPERTIES=true
 GRAPH_EXTRACT_RELATIONSHIP_PROPERTIES=true
+
+# Retrieval quality controls
+DOCUMENT_SEARCH_SCORE_THRESHOLD=0.72
+DOCUMENT_SEARCH_TOP_K=7
+ENTITY_RESOLVE_MIN_VECTOR_SCORE=0.78
+ENTITY_RESOLVE_MIN_SCORE_MARGIN=0.06
+ENTITY_RESOLVE_MIN_TOKEN_OVERLAP=0.5
+ENTITY_RESOLVE_FULLTEXT_LIMIT=5
+
+# Graph quality controls
+GRAPH_RELATIONSHIP_EXCLUDE_TYPES=MENTIONS
+GRAPH_PATH_MAX_DISTANCE=5
+ENABLE_GLOBAL_CONTEXT=true
+GLOBAL_CONTEXT_MAX_COMMUNITIES=5
+GLOBAL_CONTEXT_MAX_FACTS=8
+
+# Grounding and confidence behavior
+ALLOW_CYPHER_FALLBACK_WITHOUT_RETRIEVAL=false
+CONFIDENCE_MIN_FOR_UNGROUNDED=0.05
+CONFIDENCE_MAX_FOR_UNGROUNDED=0.25
+HYBRID_MIN_EVIDENCE_SNIPPETS=1
+
+# Planner latency controls
+ENABLE_QUERY_PLANNER_FAST_PATH=true
+ENABLE_QUERY_PLAN_CACHE=true
+QUERY_PLAN_CACHE_SIZE=256
